Update and rename README.md to README.html

--- a/README.html
+++ b/README.html
@@ -1,6 +1,7 @@
+<script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 Table of contents
 
-1	Another AI experience in Business Central
+###1	Another AI experience in Business Central
 
 2	Functional flow resume
 
@@ -21,7 +22,7 @@ Table of contents
 4.6	Business Central interacts with an AI model to understand the document type and perform matching
 
  
-1	  Another AI experience in Business Central
+#1	  Another AI experience in Business Central
 At BMS, we were working on a project to integrate documents into Business Central using AI. There wasn't enough time to move this POC forward, so Microsoft beat us to it.. The public preview of version 26 of Business Central features the Payable Agent, capable of integrating a purchase invoice from a PDF file.
 Our project was set up in the same way as Microsoft's (Same components), except that it supported other documents, not just purchase invoices.
 This is a POC, a basis for continuing a major project.
